--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -8,7 +8,7 @@ tasks:
   build-darwin:
     desc: "Build Darwin binary"
     cmds:
-      - go build -o ./out/serve-darwin ./cmd/
+      - go build -ldflags "-w -s" -o ./out/serve-darwin ./cmd/
     env:
       GOARCH: amd64
       GOOS: darwin
@@ -16,7 +16,7 @@ tasks:
   build-linux:
     desc: "Build Linux binary"
     cmds:
-      - go build -o ./out/serve-linux ./cmd/
+      - go build -ldflags "-w -s" -o ./out/serve-linux ./cmd/
     env:
       GOARCH: amd64
       GOOS: linux
@@ -24,7 +24,7 @@ tasks:
   build-windows:
     desc: "Build Windows binary"
     cmds:
-      - go build -o ./out/serve-windows ./cmd/
+      - go build -ldflags "-w -s" -o ./out/serve-windows ./cmd/
     env:
       GOARCH: amd64
       GOOS: windows
